tl::expected/optional dependencies & SDL2 Window/Context wrapper

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ target_link_libraries(${EXECUTABLE_NAME} PRIVATE fmt::fmt-header-only)
 
 # spdlog
 find_package(spdlog CONFIG REQUIRED)
-target_link_libraries(${EXECUTABLE_NAME} PRIVATE spdlog::spdlog_header_only)
+target_link_libraries(${EXECUTABLE_NAME} PRIVATE spdlog::spdlog)
 
 # entt
 find_package(entt CONFIG REQUIRED)
@@ -35,3 +35,9 @@ target_link_libraries(${EXECUTABLE_NAME} PRIVATE EnTT::EnTT)
 find_package(SDL2 CONFIG REQUIRED)
 target_link_libraries(${EXECUTABLE_NAME} PRIVATE SDL2::SDL2)
 target_link_libraries(${EXECUTABLE_NAME} PRIVATE SDL2::SDL2main)
+
+# tl-<expected/optional>
+find_package(tl-expected CONFIG REQUIRED)
+find_package(tl-optional CONFIG REQUIRED)
+target_link_libraries(${EXECUTABLE_NAME} PRIVATE tl::expected)
+target_link_libraries(${EXECUTABLE_NAME} PRIVATE tl::optional)
