--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,8 +33,10 @@ target_link_libraries(${EXECUTABLE_NAME} PRIVATE EnTT::EnTT)
 
 # sdl2
 find_package(SDL2 CONFIG REQUIRED)
+find_package(SDL2-image CONFIG REQUIRED)
 target_link_libraries(${EXECUTABLE_NAME} PRIVATE SDL2::SDL2)
 target_link_libraries(${EXECUTABLE_NAME} PRIVATE SDL2::SDL2main)
+target_link_libraries(${EXECUTABLE_NAME} PRIVATE SDL2::SDL2_image)
 
 # tl-<expected/optional>
 find_package(tl-expected CONFIG REQUIRED)
