Added: systems, TMP meta, and RNG functionality

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,7 @@
 set(TEXT_EXE tests_run)
-add_executable(${TEXT_EXE} test_main.cpp "core-test/type_map-test.cpp" "core-test/resource-test.cpp")
+
+set(TEST_SOURCES "core-test/type_map-test.cpp" "core-test/resource-test.cpp" "core-test/system-test.cpp" "core-test/meta-test.cpp" "util-test/rng-test.cpp")
+add_executable(${TEXT_EXE} test_main.cpp ${TEST_SOURCES})
 
 find_package(entt CONFIG REQUIRED)
 target_link_libraries(${TEXT_EXE} PRIVATE EnTT::EnTT)
