Rework AssetsServer, added asset_io_impl

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,6 +15,7 @@ set(TEST_SOURCES
 	"util-test/uuid-test.cpp"
 	"util-test/memory-test/rc-test.cpp"
 	"core-test/assets-test/asset_server-test.cpp"
+	"core-test/assets-test/asset_io-test/asset_io_impl-test.cpp"
 	)
 
 include_directories(ut)
