--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(TEXT_EXE tests_run)
+set(TEST_EXE tests_run)
 
 set(TEST_SOURCES 
 	"util-test/type_map-test.cpp" 
@@ -16,11 +16,21 @@ set(TEST_SOURCES
 	"util-test/memory-test/rc-test.cpp"
 	"core-test/assets-test/asset_server-test.cpp"
 	"core-test/assets-test/asset_io-test/asset_io_impl-test.cpp"
+	"sdl-test/sdl_loader-test.cpp"
 	)
 
 include_directories(ut)
 
-add_executable(${TEXT_EXE} test_main.cpp ${TEST_SOURCES})
+add_executable(${TEST_EXE} test_main.cpp ${TEST_SOURCES})
 
 find_package(entt CONFIG REQUIRED)
-target_link_libraries(${TEXT_EXE} PRIVATE EnTT::EnTT)
+target_link_libraries(${TEST_EXE} PRIVATE EnTT::EnTT)
+
+find_package(SDL2 CONFIG REQUIRED)
+find_package(SDL2-image CONFIG REQUIRED)
+target_link_libraries(${TEST_EXE} PRIVATE SDL2::SDL2)
+target_link_libraries(${TEST_EXE} PRIVATE SDL2::SDL2_image)
+
+# copy assets folder
+file(REMOVE_RECURSE "${CMAKE_CURRENT_BINARY_DIR}/assets")
+file(COPY "${CMAKE_SOURCE_DIR}/tests/assets" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
