--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,6 +18,7 @@ set(TEST_SOURCES
 	"core-test/assets-test/asset_io-test/asset_io_impl-test.cpp"
 	"sdl-test/sdl_img_loader-test.cpp"
 	"core-test/events-test/events-test.cpp"
+	"core-test/input-test/input-test.cpp"
 	)
 
 include_directories(ut)
