Scheduler Rework & other changes

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,9 +4,11 @@ set(TEST_SOURCES
 	"util-test/type_map-test.cpp" 
 	"core-test/ecs-test/resource-test.cpp" 
 	"core-test/ecs-test/system-test.cpp" 
+	"core-test/ecs-test/scheduler-test.cpp" 
 	"util-test/meta-test.cpp" 
 	"util-test/rng-test.cpp" 
-	"core-test/game-test.cpp" 
+	"core-test/game-test/game-test.cpp" 
+	"core-test/game-test/runner-test.cpp" 
 	"util-test/common-test.cpp" 
 	"core-test/assets-test/assets-test.cpp"
 	"core-test/assets-test/handle-test.cpp"
