--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,6 +23,7 @@ set(TEST_SOURCES
 	"core-test/game-test/events-test.cpp"
 	"core-test/input-test/input-test.cpp"
 	"core-test/input-test/mouse-test.cpp"
+	"util-test/ranges-test/chain-test.cpp"
 	)
 
 include_directories(ut)
